--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,14 @@
     "settings.lustria.hint": "Adds the Lustrian between adventures endeavours and replace all travel endeavours with the ones listed in Lustria.",
     "settings.dwarf.name": "Dwarf Player's Guide Endeavour",
     "settings.dwarf.hint": "Adds the Forge Rune endeavour included in Dwarf Player's Guide.",
+    "settings.criminal.name": "Criminal Endeavours (Deft Steps Light Fingers)",
+    "settings.criminal.hint": "Adds the criminal endeavours included in Deft Steps Light Fingers.",
+    "settings.organizedcrime.name": "Organized Crime Endeavours (Deft Steps Light Fingers)",
+    "settings.organizedcrime.hint": "Adds the organized crime endeavours included in Deft Steps Light Fingers.",
+    "settings.gaol.name": "Gaol Break Endeavour (Deft Steps Light Fingers)",
+    "settings.gaol.hint": "Replace the between adventures endeavours with the ones available in gaol, as listed in Deft Steps Light Fingers.",
+    "settings.wilderness.name": "Wilderness Travel Endeavours (Deft Steps Light Fingers)",
+    "settings.wilderness.hint": "Replace the travel endeavours with the wilderness travel endeavours, as listed in Deft Steps Light Fingers.",
     "settings.shelley.name": "Shelley Endeavour",
     "settings.shelley.hint": "Adds the endeavour granted by Scealleah 'Shelley' Thorncobble (Patrons of the Old World I).",
     "settings.farforian.name": "Farforian Endeavour",
@@ -25,6 +33,7 @@
     "settings.ulricsson.hint": "Adds the endeavour granted by Diel Ulricsson (Patrons of the Old World II).",
 
     "WFRP4eEndeavours.EventsTable": "Events Table",
+    "WFRP4eEndeavours.NoEventsTable": "Events Table not found.",
     "WFRP4eEndeavours.BAEvent": "Between Adventures Event",
 
     "WFRP4eEndeavours.NoToken": "You must select at least one PC token",
@@ -87,18 +96,44 @@
     "WFRP4eEndeavours.BA.Visionaries": "No Use for Visionaries",
     "WFRP4eEndeavours.BA.Witness": "Bear Witness",
     "WFRP4eEndeavours.BA.ForgeRune": "Forge Rune",
+    "WFRP4eEndeavours.BA.BlackMarket": "Black Market",
+    "WFRP4eEndeavours.BA.Gambling": "Gambling Den",
+    "WFRP4eEndeavours.BA.Identities": "Plant Identities",
+    "WFRP4eEndeavours.BA.Whisper": "Whisper Campaign",
+    "WFRP4eEndeavours.BA.Gang": "Build Gang",
+    "WFRP4eEndeavours.BA.Organising": "Organising Crime",
+    "WFRP4eEndeavours.BA.Influence": "Maintain Influence",
+    "WFRP4eEndeavours.BA.Gaol": "Gaol Break",
 
     "WFRP4eEndeavours.Travel.Woodcraft": "Woodcraft",
     "WFRP4eEndeavours.Travel.Forage": "Forage",
     "WFRP4eEndeavours.Travel.Information": "Gather Information",
     "WFRP4eEndeavours.Travel.Watch": "Keep Watch",
-    "WFRP4eEndeavours.Travel.Map": "Map the Route",
+    "WFRP4eEndeavours.Travel.MapRoute": "Map the Route",
     "WFRP4eEndeavours.Travel.Practice": "Practice a Skill",
     "WFRP4eEndeavours.Travel.Recuperate": "Recuperate",
     "WFRP4eEndeavours.Travel.Camp": "Make Camp",
     "WFRP4eEndeavours.Travel.Shelter": "Find Shelter",
     "WFRP4eEndeavours.Travel.ForageforFood": "Forage for Food",
     "WFRP4eEndeavours.Travel.Boat": "Repair a Boat",
+    "WFRP4eEndeavours.Travel.Planning": "Planning",
+    "WFRP4eEndeavours.Travel.ForageWilderness": "Forage (Travel)",
+    "WFRP4eEndeavours.Travel.Haste": "Haste (Travel)",
+    "WFRP4eEndeavours.Travel.Hunt": "Hunt (or Fish) (Travel)",
+    "WFRP4eEndeavours.Travel.Navigate": "Navigate (Travel)",
+    "WFRP4eEndeavours.Travel.NavigateDouble": "Navigate (Double)",
+    "WFRP4eEndeavours.Travel.Map": "Map (Travel)",
+    "WFRP4eEndeavours.Travel.MapDouble": "Map (Double)",
+    "WFRP4eEndeavours.Travel.Scout": "Scout (Travel)",
+    "WFRP4eEndeavours.Travel.Track": "Track (Travel)",
+    "WFRP4eEndeavours.Travel.Water": "Water (Travel)",
+    "WFRP4eEndeavours.Travel.Cook": "Cook (Camp)",
+    "WFRP4eEndeavours.Travel.Journal": "Journal (Camp)",
+    "WFRP4eEndeavours.Travel.MakeCamp": "Make Camp (Camp)",
+    "WFRP4eEndeavours.Travel.RecuperateWilderness": "Recuperate (No Travel)",
+    "WFRP4eEndeavours.Travel.Trap": "Trap (Camp)",
+    "WFRP4eEndeavours.Travel.WatchWilderness": "Watch (Camp)",
+    "WFRP4eEndeavours.Travel.WatchExtra": "Watch (Extra)",
 
     "WFRP4eEndeavours.Link.Animal": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.WQQk92GoGp7fRH89]{Animal Training}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.zWoIAiRiUEhgHwrE]{Animal Training}",
     "WFRP4eEndeavours.Link.Banking": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.OqE6vzTEebofbX92]{Banking}.",
@@ -120,7 +155,7 @@
     "WFRP4eEndeavours.Link.Forage": "Forage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forage}",
     "WFRP4eEndeavours.Link.Information": "Gather Information.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Gather Information}",
     "WFRP4eEndeavours.Link.Watch": "Keep Watch.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Keep Watch}",
-    "WFRP4eEndeavours.Link.Map": "Map the Route.",
+    "WFRP4eEndeavours.Link.MapRoute": "Map the Route.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.KngazhroUpOdUc6R]{Start Mapping the Route}",
     "WFRP4eEndeavours.Link.Practice": "Practice a Skill.",
     "WFRP4eEndeavours.Link.Recuperate": "Recuperate.",
     "WFRP4eEndeavours.Link.Camp": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Make Camp}",
@@ -164,6 +199,32 @@
     "WFRP4eEndeavours.Link.Visionaries": "No Use for Visionaries.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Y8S3DwkxYEFpMUdM]{Foment Dissent with Rosendorn}.<br>Then @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ZYiQGec6Gi6K85lz]{Rosendorn's Prophecy} for Rosendorn",
     "WFRP4eEndeavours.Link.Witness": "Bear Witness.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.dJZMhU1DKTmdvy8S]{Bear Witness}",
     "WFRP4eEndeavours.Link.ForgeRune": "Forge Rune.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.j8yh1Gr1iCbNG2K8]{Start Forging Rune}",
+    "WFRP4eEndeavours.Link.BlackMarket": "Black Market.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.DMNmy5VByEVgCzCt]{Black Market}",
+    "WFRP4eEndeavours.Link.Gambling": "Gambling Den.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Ij6oHBcYgdoGzNc8]{Gambling Den}",
+    "WFRP4eEndeavours.Link.Identities": "Plant Identities.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.dszrHUqkqFE1CTN8]{Plant Identities}",
+    "WFRP4eEndeavours.Link.Whisper": "Whisper Campaign.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.K0IOP24fgFLRliCt]{Whisper Campaign}",
+    "WFRP4eEndeavours.Link.Gang": "Build Gang.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.EdLX6p0NR2NmXgpN]{Build Gang}",
+    "WFRP4eEndeavours.Link.Organising": "Organising Crime.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.9XA0wLyLptTNtSvi]{Organising Crime}",
+    "WFRP4eEndeavours.Link.Influence": "Mantain Influence.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.aiU4M5AVb3Io6zyf]{Maintain Influence}",
+    "WFRP4eEndeavours.Link.Gaol": "Gaol Break.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.JURiC50BW5u0I6Lb]{Gaol Break}.</p><p>The GM may add further complexity to the break.</p>",
+    "WFRP4eEndeavours.Link.Planning": "Planning.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.3LnPKU6xdHMSg9FO]{Planning}.</p>",
+    "WFRP4eEndeavours.Link.ForageWilderness": "Forage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.BTIbtOtL1myVgoTN]{Forage}.</p>",
+    "WFRP4eEndeavours.Link.Haste": "Haste.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Gix6ZOfzoVoJnpds]{Haste}.</p>",
+    "WFRP4eEndeavours.Link.Hunt": "Hunt (or Fish).</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.TLesvOsKoUasb1Q9]{Hunt (or Fish)}.</p>",
+    "WFRP4eEndeavours.Link.Navigate": "Navigate.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.FE5qBgZdUhOW0lRW]{Navigate}.</p>",
+    "WFRP4eEndeavours.Link.NavigateDouble": "Navigate (Double).</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.9GARa8DELUyIe66u]{Navigate}.</p>",
+    "WFRP4eEndeavours.Link.Map": "Map.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RwUMImH7eIMeH1xP]{Map}.</p>",
+    "WFRP4eEndeavours.Link.MapDouble": "Map (Double).</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.JV023JNm5vLrPfxR]{Map}.</p>",
+    "WFRP4eEndeavours.Link.Scout": "Scout.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.s7kQP2pxWPGyY7AF]{Scout}.</p>",
+    "WFRP4eEndeavours.Link.Track": "Track.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.4YDQ55erkaPxqlAa]{Track}.</p>",
+    "WFRP4eEndeavours.Link.Water": "Water.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.18hYJdyqEJLRzWEn]{Find Water} and maybe @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.mVUKMDkgmj8urGpS]{Spot Contaminated Water}.</p>",
+    "WFRP4eEndeavours.Link.Cook": "Cook.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.lZnSREus05cIbRzF]{Cook}.</p>",
+    "WFRP4eEndeavours.Link.Journal": "Journal.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.GEyP2s8doW0B4Suo]{Journal}.</p>",
+    "WFRP4eEndeavours.Link.MakeCamp": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.R4FzAj5UJko9iBaw]{Make Camp}.</p>",
+    "WFRP4eEndeavours.Link.RecuperateWilderness": "Recuperate.",
+    "WFRP4eEndeavours.Link.Trap": "Trap.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.D1YzPifCWEfWAxhx]{Trap}.</p>",
+    "WFRP4eEndeavours.Link.WatchWilderness": "Watch.</b></h3><p>If you have any @Condition[Fatigued] Condition, you must roll to @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.eoHxUiW86aCSTmct]{stay awake}.",
+    "WFRP4eEndeavours.Link.WatchExtra": "Watch (Extra).</b></h3><p>Try to @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.mprdlt9BxnUcKFg6]{stay awake}.</p>",
 
     "WFRP4eEndeavours.Title.Animal": "Animal Training",
     "WFRP4eEndeavours.Title.Crafting": "Start Crafting",
@@ -179,6 +240,7 @@
     "WFRP4eEndeavours.Title.Forage": "Forage",
     "WFRP4eEndeavours.Title.Information": "Gather Information",
     "WFRP4eEndeavours.Title.Watch": "Keep Watch",
+    "WFRP4eEndeavours.Title.MapRoute": "Map the Route",
     "WFRP4eEndeavours.Title.CampRest": "Make Camp (Rest)",
     "WFRP4eEndeavours.Title.CampHeal": "Make Camp (Heal)",
     "WFRP4eEndeavours.Title.College": "College Research",
@@ -208,6 +270,28 @@
     "WFRP4eEndeavours.Title.Visionaries": "Rosendorn's Prophecy",
     "WFRP4eEndeavours.Title.Witness": "Bear Witness",
     "WFRP4eEndeavours.Title.ForgeRune": "Start Forging Rune",
+    "WFRP4eEndeavours.Title.BlackMarket": "Black Market",
+    "WFRP4eEndeavours.Title.Gambling": "Gambling Den",
+    "WFRP4eEndeavours.Title.Identities": "Plant Identities",
+    "WFRP4eEndeavours.Title.Whisper": "Whisper Campaign",
+    "WFRP4eEndeavours.Title.Gang": "Build Gang",
+    "WFRP4eEndeavours.Title.Organising": "Organising Crime",
+    "WFRP4eEndeavours.Title.Influence": "Mantain Influence",
+    "WFRP4eEndeavours.Title.Gaol": "Gaol Break",
+    "WFRP4eEndeavours.Title.Planning": "Planning",
+    "WFRP4eEndeavours.Title.Haste": "Haste",
+    "WFRP4eEndeavours.Title.Hunt": "Hunt (or Fish)",
+    "WFRP4eEndeavours.Title.Navigate": "Navigate",
+    "WFRP4eEndeavours.Title.Map": "Map",
+    "WFRP4eEndeavours.Title.Scout": "Scout",
+    "WFRP4eEndeavours.Title.Track": "Track",
+    "WFRP4eEndeavours.Title.Water": "Find Water",
+    "WFRP4eEndeavours.Title.ContaminatedWater": "Spot Contaminated Water",
+    "WFRP4eEndeavours.Title.Cook": "Cook",
+    "WFRP4eEndeavours.Title.Journal": "Journal",
+    "WFRP4eEndeavours.Title.MakeCamp": "Make Camp",
+    "WFRP4eEndeavours.Title.Trap": "Trap",
+    "WFRP4eEndeavours.Title.WatchWilderness": "Stay Awake",
 
     "WFRP4eEndeavours.Failure.Animal": "<p>Your animal needs more training.</p>",
     "WFRP4eEndeavours.Failure.Expert": "<p>Still didn't find an expert.</p>",
@@ -249,6 +333,28 @@
     "WFRP4eEndeavours.Failure.Null": "<p>Some of Wilhelm's Null Trait has rubbed off on you.</p>",
     "WFRP4eEndeavours.Failure.Visionaries": "<p>Rosendorn is struck by a terrible revelation about you which she absolutely refuses to share with you.</p>",
     "WFRP4eEndeavours.Failure.Witness": "<p>You don't learn anything new from Ulricsson.</p>",
+    "WFRP4eEndeavours.Failure.BlackMarket": "<p>Nothing of interest in the black market this time.</p>",
+    "WFRP4eEndeavours.Failure.Gambling": "<p>This isn't your lucky day!</p>",
+    "WFRP4eEndeavours.Failure.Identities": "<p>You need more practice.</p>",
+    "WFRP4eEndeavours.Failure.Whisper": "<p>People think your rumours are false.</p>",
+    "WFRP4eEndeavours.Failure.Gang": "<p>You need more efforts to grow your gang.</p>",
+    "WFRP4eEndeavours.Failure.Organising": "<p>Your gang is losing assets.</p>",
+    "WFRP4eEndeavours.Failure.Influence": "<p>Your influence is not as big as you expected.</p>",
+    "WFRP4eEndeavours.Failure.Gaol": "<p>You can't break free.</p>",
+    "WFRP4eEndeavours.Failure.Planning": "<p>You can't contribute to the planning.</p>",
+    "WFRP4eEndeavours.Failure.Haste": "<p>You are a bit @Condition[Fatigued].</p>",
+    "WFRP4eEndeavours.Failure.Hunt": "<p>You can't provide food.</p>",
+    "WFRP4eEndeavours.Failure.Navigate": "<p>You're leading your party astray or lost.</p>",
+    "WFRP4eEndeavours.Failure.Map": "<p>Your map needs more work.</p>",
+    "WFRP4eEndeavours.Failure.Scout": "<p>You can't see it coming.</p>",
+    "WFRP4eEndeavours.Failure.Track": "<p>You lost the track.</p>",
+    "WFRP4eEndeavours.Failure.Water": "<p>You can't find water.</p>",
+    "WFRP4eEndeavours.Failure.ContaminatedWater": "<p>Pretty sure this water is potable.</p>",
+    "WFRP4eEndeavours.Failure.Cook": "<p>The food was spoiled.</p>",
+    "WFRP4eEndeavours.Failure.Journal": "<p>Booooring.</p>",
+    "WFRP4eEndeavours.Failure.MakeCamp": "<p>Tonight you can't rest well.</p>",
+    "WFRP4eEndeavours.Failure.Trap": "<p>Traps didn't work as they should.</p>",
+    "WFRP4eEndeavours.Failure.WatchWilderness": "<p>You fall asleep.</p>",
 
     "WFRP4eEndeavours.Success.Animal": "<p>Your animal learned a new trick! You can add a @UUID[Compendium.wfrp4e-core.items.Item.V0naR1YbYCl0KIxp]{Trained} Creature Trait.</p>",
     "WFRP4eEndeavours.Success.Expert": "<p>An expert has been located.</p>",
@@ -290,6 +396,28 @@
     "WFRP4eEndeavours.Success.Null": "<p>All is going well... for now.</p>",
     "WFRP4eEndeavours.Success.Visionaries": "<p>Rosendorn catches a glimpse of your immediate future.</p>",
     "WFRP4eEndeavours.Success.Witness": "<p>Ulricsson's lessons teach you more about Sigmar's life, but maybe it's heresy?</p>",
+    "WFRP4eEndeavours.Success.BlackMarket": "<p>A profitable day at the black market.</p>",
+    "WFRP4eEndeavours.Success.Gambling": "<p>This is your lucky day!</p>",
+    "WFRP4eEndeavours.Success.Identities": "<p>You're getting into your character in-depth. You may count as having the @UUID[Compendium.wfrp4e-core.items.Item.PJ4oxDExnuFNr2Fi]{Secret Identity} Talent for the next adventure.</p>",
+    "WFRP4eEndeavours.Success.Whisper": "<p>The campaign was a success.</p>",
+    "WFRP4eEndeavours.Success.Gang": "<p>Your gang is growing bigger and bigger!</p>",
+    "WFRP4eEndeavours.Success.Organising": "<p>Your gang is maintained. You've got an action to perform.</p>",
+    "WFRP4eEndeavours.Success.Influence": "<p>Your influence is coming to fruition.</p>",
+    "WFRP4eEndeavours.Success.Gaol": "<p>You are free again!</p>",
+    "WFRP4eEndeavours.Success.Planning": "<p>Your contributions will help in the journey.</p>",
+    "WFRP4eEndeavours.Success.Haste": "<p>You keep pace. And the rest of your party?</p>",
+    "WFRP4eEndeavours.Success.Hunt": "<p>That looks tasty.</p>",
+    "WFRP4eEndeavours.Success.Navigate": "<p>You guide your party on the right path.</p>",
+    "WFRP4eEndeavours.Success.Map": "<p>You create a quality map.</p>",
+    "WFRP4eEndeavours.Success.Scout": "<p>You see the danger ahead.</p>",
+    "WFRP4eEndeavours.Success.Track": "<p>You follow the track.</p>",
+    "WFRP4eEndeavours.Success.Water": "<p>You find water.</p>",
+    "WFRP4eEndeavours.Success.ContaminatedWater": "<p>Don't drink this water!</p>",
+    "WFRP4eEndeavours.Success.Cook": "<p>This deserves a compliment!</p>",
+    "WFRP4eEndeavours.Success.Journal": "<p>It is actually an interesting journal!</p>",
+    "WFRP4eEndeavours.Success.MakeCamp": "<p>The ground is prepared for a restuful night's sleep.</p>",
+    "WFRP4eEndeavours.Success.Trap": "<p>There is quarry in your traps!</p>",
+    "WFRP4eEndeavours.Success.WatchWilderness": "<p>You keep watch the whole shift.</p>",
 
     "WFRP4eEndeavours.NoSubmit": "You must choose a Skill",
     "WFRP4eEndeavours.NoSubmitWeapon": "You must choose a Weapon",
@@ -314,18 +442,32 @@
     "WFRP4eEndeavours.Entertaining.ChooseSkill": "Choose a skill for income.",
     "WFRP4eEndeavours.Ship.ChooseSkill": "Choose a skill to maintain ships.",
     "WFRP4eEndeavours.Boat.ChooseSkill": "Choose a skill to repair the boat.",
+    "WFRP4eEndeavours.Planning.Choose": "How do you want to contribute to the planning?",
+    "WFRP4eEndeavours.TypeSkill": "Type the Skill",
+    "WFRP4eEndeavours.Map.ChooseSkill": "Choose a skill to create the map.",
+    "WFRP4eEndeavours.Cook.ChooseSkill": "Choose a skill to cook.",
+    "WFRP4eEndeavours.Journal.ChooseSkill": "Choose a skill to write your journal.",
 
     "NAME.EntertainProphecy":"Entertain (Prophecy)",
     "NAME.EntertainStorytelling":"Entertain (Storytelling)",
+    "NAME.EntertainActing":"Entertain (Acting)",
     "NAME.RangedBow":"Ranged (Bow)",
     "NAME.TradeEngineering":"Trade (Engineering)",
     "NAME.TradeCartographer":"Trade (Cartographer)",
+    "NAME.TradeCartography":"Trade (Cartography)",
     "NAME.TradeBoatbuilder":"Trade (Boatbuilder)",
     "NAME.TradeCarpenter":"Trade (Carpenter)",
     "NAME.ReadWrite":"Read/Write",
     "NAME.LoreTheology":"Lore (Theology)",
     "NAME.LoreSigmar":"Lore (Sigmar)",
     "NAME.Runesmithing":"Runesmithing",
+    "NAME.StealthRural":"Stealth (Rural)",
+    "NAME.StealthUnderground":"Stealth (Underground)",
+    "NAME.StealthUrban":"Stealth (Urban)",
+    "NAME.LoreHerbs":"Lore (Herbs)",
+    "NAME.ArtDrawing":"Art (Drawing)",
+    "NAME.TradeCooking":"Trade (Cooking)",
+    "NAME.ArtWriting":"Art (Writing)",
 
     "WFRP4eEndeavours.ItemName": "Item Name",
     "WFRP4eEndeavours.Crafting": "Crafting: ",
@@ -340,6 +482,12 @@
 
     "WFRP4eEndeavours.Income.Earned": "You earned ",
     "WFRP4eEndeavours.Income.Fumble": "You earned nothing at all.",
+
+    "WFRP4eEndeavours.Gaol.Held": "Prisoner is being held...",
+    "WFRP4eEndeavours.Gaol.Minor": "...in a cell at a watch post",
+    "WFRP4eEndeavours.Gaol.Moderate": "...for Moderate Crimes",
+    "WFRP4eEndeavours.Gaol.Serious": "...for Serious Crimes",
+    "WFRP4eEndeavours.Gaol.Heinous": "...for Heinous Crimes",
 
     "WFRP4eEndeavours.MoneytoBurn.Title": "Money to Burn",
     "WFRP4eEndeavours.MoneytoBurn.Hint": "The money of these actors will be burned:<br>{players}</ul>This action can't be undone. Are you sure?",
