feat: added Altdorf endeavours journal links

--- a/lang/en.json
+++ b/lang/en.json
@@ -159,11 +159,11 @@
     "WFRP4eEndeavours.Link.Practice": "Practice a Skill.",
     "WFRP4eEndeavours.Link.Recuperate": "Recuperate.",
     "WFRP4eEndeavours.Link.Camp": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Make Camp}",
-    "WFRP4eEndeavours.Link.College": "College Research.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6w5TWRe30xs1PwmX]{College Research}",
-    "WFRP4eEndeavours.Link.Patronage": "Patronage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Tc4mUAG2DtdfdRaI]{Patronage}",
-    "WFRP4eEndeavours.Link.Penance": "Penance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penance}",
-    "WFRP4eEndeavours.Link.UnusualWeapon": "Train with Unusual Weapon.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v5Ak1SpPFI1w103T]{Train with Unusual Weapon}",
-    "WFRP4eEndeavours.Link.MagicItem": "Test Magic Item.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ylLwAYTLTIFHA0Yw]{Test Magic Item}",
+    "WFRP4eEndeavours.Link.College": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.4k9zO8G9Ay17d6mE]{College Research}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6w5TWRe30xs1PwmX]{College Research}",
+    "WFRP4eEndeavours.Link.Patronage": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.uhLjGqt3xvPs31y9]{Patronage}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Tc4mUAG2DtdfdRaI]{Patronage}",
+    "WFRP4eEndeavours.Link.Penance": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.wXzB8KB4b18ALbhM]{Penance}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penance}",
+    "WFRP4eEndeavours.Link.UnusualWeapon": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.gaYyVk8hf4vJ069c]{Train with Unusual Weapon}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v5Ak1SpPFI1w103T]{Train with Unusual Weapon}",
+    "WFRP4eEndeavours.Link.MagicItem": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.LdCC0S0HTG8I5D6t]{Test Magic Item}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ylLwAYTLTIFHA0Yw]{Test Magic Item}",
     "WFRP4eEndeavours.Link.Alcatini": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#alcatini-method]{Alcatini Method}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.83QgU78rUIFABQsF]{Alcatini Method}",
     "WFRP4eEndeavours.Link.Punchausen": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#count-punchausens-narrative-auction]{Count Punchausen's Narrative Auction}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.aDttKH3qyNCR6iGf]{Count Punchausen's Narrative Auction}",
     "WFRP4eEndeavours.Link.Fanmaris": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#fanmariss-perfect-shot]{Fanmaris's Perfect Shot}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.zXFw4YVj4nXE7Zet]{Fanmaris's Perfect Shot}",
