--- a/lang/es.json
+++ b/lang/es.json
@@ -159,11 +159,11 @@
     "WFRP4eEndeavours.Link.Practice": "Practicar una habilidad.",
     "WFRP4eEndeavours.Link.Recuperate": "Recuperar.",
     "WFRP4eEndeavours.Link.Camp": "Acampar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Acampar}",
-    "WFRP4eEndeavours.Link.College": "Investigaci\u00F3n en Colegio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6w5TWRe30xs1PwmX]{Investigaci\u00F3n en Colegio}",
-    "WFRP4eEndeavours.Link.Patronage": "Patrocinio.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Tc4mUAG2DtdfdRaI]{Patrocinio}",
-    "WFRP4eEndeavours.Link.Penance": "Penitencia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penitencia}",
-    "WFRP4eEndeavours.Link.UnusualWeapon": "Entrenar con arma inusual.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v5Ak1SpPFI1w103T]{Entrenar con arma inusual}",
-    "WFRP4eEndeavours.Link.MagicItem": "Probar objeto m\u00E1gico.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ylLwAYTLTIFHA0Yw]{Probar objeto m\u00E1gico]",
+    "WFRP4eEndeavours.Link.College": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.4k9zO8G9Ay17d6mE]{Investigaci\u00F3n en Colegio}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6w5TWRe30xs1PwmX]{Investigaci\u00F3n en Colegio}",
+    "WFRP4eEndeavours.Link.Patronage": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.uhLjGqt3xvPs31y9]{Patrocinio}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Tc4mUAG2DtdfdRaI]{Patrocinio}",
+    "WFRP4eEndeavours.Link.Penance": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.wXzB8KB4b18ALbhM]{Penitencia}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penitencia}",
+    "WFRP4eEndeavours.Link.UnusualWeapon": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.gaYyVk8hf4vJ069c]{Entrenar con arma inusual}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v5Ak1SpPFI1w103T]{Entrenar con arma inusual}",
+    "WFRP4eEndeavours.Link.MagicItem": "@UUID[JournalEntry.6TQJhPM0O7GgIPw9.JournalEntryPage.LdCC0S0HTG8I5D6t]{Probar objeto m\u00E1gico}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ylLwAYTLTIFHA0Yw]{Probar objeto m\u00E1gico]",
     "WFRP4eEndeavours.Link.Alcatini": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#alcatini-method]{M\u00E9todo Alcatini}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.83QgU78rUIFABQsF]{M\u00E9todo Alcatini}",
     "WFRP4eEndeavours.Link.Punchausen": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#count-punchausens-narrative-auction]{Subasta narrativa del Conde Punchausen}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.aDttKH3qyNCR6iGf]{Subasta narrativa del Conde Punchausen}",
     "WFRP4eEndeavours.Link.Fanmaris": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#fanmariss-perfect-shot]{El disparo perfecto de Fanmaris}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.zXFw4YVj4nXE7Zet]{El disparo perfecto de Fanmaris}",
